--- a/style.css
+++ b/style.css
@@ -699,7 +699,7 @@ button.start-button-wrapper:hover {
 
 .quiz-box {
   width: 690px;
-  height: 320px;
+  height: 500px;
   max-width: 95vw;
   max-height: 95vh;
   background: #1D2930;
@@ -712,15 +712,15 @@ button.start-button-wrapper:hover {
 
 .close-btn {
   position: absolute;
-  top: 32px;
-  left: 644px;
-  width: 20px;
-  height: 20px;
+  top: 15px;
+  right: 20px;
+  width: 25px;
+  height: 25px;
   color: white;
   cursor: pointer;
   z-index: 101;
-  font-size: 20px;
-  line-height: 20px;
+  font-size: 24px;
+  line-height: 25px;
   text-align: center;
   overflow: hidden;
 }
@@ -731,28 +731,33 @@ button.start-button-wrapper:hover {
 
 .quiz-title {
   position: absolute;
-  left: 283px;
-  top: 42px;
+  left: 50%;
+  top: 30px;
+  transform: translateX(-50%);
   text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
   color: #F99C16;
-  font-size: 32px;
+  font-size: 28px;
   font-family: "Noto Sans";
   font-weight: 700;
+  z-index: 10;
+}
+
+.quiz-question-container {
+  position: absolute;
+  left: 50%;
+  top: 80px;
+  transform: translateX(-50%);
+  width: 90%;
+  max-width: 500px;
 }
 
 .quiz-question {
-  position: absolute;
-  left: 153px;
-  top: 23px;
-  max-width: 400px;
+  position: relative;
+  left: 0;
+  top: 0;
+  margin-bottom: 30px;
   text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  color: black;
+  color: white;
   font-size: 18px;
   font-family: "Noto Sans";
   font-weight: 700;
@@ -762,14 +767,14 @@ button.start-button-wrapper:hover {
 }
 
 .quiz-options {
-  position: absolute;
-  width: 533px;
-  left: 19px;
-  top: 56px;
+  position: relative;
+  width: 100%;
+  left: 0;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   gap: 12px;
 }
 
@@ -822,10 +827,11 @@ button.start-button-wrapper:hover {
 
 .quiz-result {
   position: absolute;
-  width: 570px;
-  height: 200px;
-  left: 60px;
-  top: 331px;
+  width: 85%;
+  height: 160px;
+  left: 50%;
+  top: 320px;
+  transform: translateX(-50%);
   background: rgba(74, 222, 128, 0.10);
   border-radius: 10px;
   outline: 1px solid #4ADE80;
